  * Added support for EXCITATION keywords in misc.nec_util
  * Added new gofast readers for TBW, TBN, and DRX
  * Added better polyphase filter support
  * Fixed initiaization problems the various lsl.reader Frame objects
  * Fixed the ring buffer TBN/DRX ring buffers
  * Added support for simulating point sources in TBW and TBN data
  * Moved the tests directory out of lsl proper

0.3.4.2
  * Fixed a couple of typos. in the correlator scripts
  * Added more colors to tbwSpectra.py so that all 20 inputs can be plotted
  * Fixed problems with DRX frame attributes
  * Fixed filter code problems in the DRX writer
  * Fixed typo in URL for libnova
  * Added a brief tutorial for DRX data
  * Fixed a problem determining if a TBW chunk has enough samples to FFT

0.3.4.1
  * Fixed various documentation problems

0.3.4
  * Added in the new cable attenuation model
  * Re-wrote the TBW reader so that is it ~40% faster
  * Removed unnecessary "import" statments in the TBW, TBN, and DRX readers
  * Fixed slow frame creation by sim.dp on 64-bit systems
  * Added in the new C-based correlator
  * Major re-organization of correlator.fx with regards to windowing functions
  * Switched from 'processing' to 'multiprocessing'
  * Added the possm.py script for each FITS IDI examination
  * Fixed tbwSpectra.py and tbnSpectra.py to accomedate the windowing change
  * Added drxSpectra.py
  * Fixed various problems with the DP data simulator
  * Added in option to cable losses in tbwSpectra.py
  * Fixed a problem in the sim.vis.Antenna class function get_beam_shape
  * Added in a correlator script for TBW
  * Added new beam models for use with AIPY based on SLC0015

0.3.3
  * Fixed stand indexing error in uvUtils.cableAttenuation
  * Fixed Mac OS X tbnSpectra.py plotting problem (Ticket #3)
  * Spectra generated by tbwSpectra.py and tbnSpectra.py now agree with IDA v0.1
  * Fixed problems with the frame comparison attributes
  * Re-wrote the TBN reader so that it is ~20% faster