@@ -12,6 +12,7 @@
   * Fixed the ring buffer TBN/DRX ring buffers
   * Added support for simulating point sources in TBW and TBN data
   * Moved the tests directory out of lsl proper
+  * Added new offset/average options to drxSpectra and tbnSpectra
 
 0.3.4.2
   * Fixed a couple of typos. in the correlator scripts
